<resources>
    <string name="app_name" translatable="false">Wallet Hotel</string>

    <string name="title_onboarding_1">Work at Home</string>
    <string name="description_onboarding_1">Work at home to more comfort. Make a great projects with this app</string>
    <string name="title_onboarding_2">Analyse Your Project</string>
    <string name="description_onboarding_2">Smart details for analysis. Do more with this app</string>
    <string name="title_onboarding_3">Achieve Your Goals</string>
    <string name="description_onboarding_3">Achieve your goals more easily. This app will help with that</string>

    <!-- *********** Text *********** -->
    <string name="txt_dynamic_text">%s</string>
    <string name="txt_menu">Menu</string>
    <string name="txt_prix">Price</string>
    <string name="txt_hi">Hi %s</string>
    <string name="txt_your_balance">Your balance is %s DT</string>
    <string name="txt_price_value">%s DT</string>
    <string name="txt_price_menu">Price : %s DT</string>
    <string name="txt_name">oussama</string>
    <string name="txt_amount">1000 D</string>
    <string name="txt_pay">to push</string>
    <string name="txt_langauge">Language</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_historical">Historical</string>
    <string name="txt_chat">Live Chat</string>
    <string name="txt_select_your_languages">Select Your Languages</string>
    <string name="txt_hello">Hello</string>
    <string name="txt_hotel_wallet">Hotel Wallet</string>
    <string name="txt_ingradients">Ingradients</string>
    <string name="txt_register">registration</string>
    <string name="txt_your_first_name">Your First Name</string>
    <string name="txt_your_last_name">Your Last Name</string>
    <string name="txt_email">Email</string>
    <string name="txt_phone">Phone</string>
    <string name="txt_confirm_password">Confirm password</string>
    <string name="txt_password">Password</string>
    <string name="txt_login">Login</string>
    <string name="txt_forget_password"><u>Forget password?</u></string>
    <string name="txt_not_have_account"><u>You do not have an account?</u></string>
    <string name="txt_enter_your_email_or_mobile">Enter Your Email Or Mobile</string>
    <string name="txt_scan">Hotel inscription made easy with just one click</string>
    <string name="txt_scan_to_login">Go To Login</string>
    <string name="txt_user_info">User information</string>
    <string name="txt_first_name">First name</string>
    <string name="txt_last_name">Last name</string>
    <string name="txt_member_since">Member since : %s</string>
    <string name="txt_privacy_policy">Privacy Policy</string>
    <string name="txt_terms_of_use">Terms of use</string>
    <string name="txt_english">English</string>
    <string name="txt_arabic">Arabic</string>
    <string name="txt_no_items">No items</string>
    <string name="txt_create_your_account">Create your Account</string>
    <string name="txt_welcome">Welcome!</string>
    <string name="txt_have_account_first"><u>Already have an account?</u></string>
    <string name="txt_quantity">Quantity :</string>
    <string name="txt_quantity_value">Quantity : %s</string>
    <string name="txt_total">Total :</string>
    <string name="txt_select_offer">Select Offer :</string>
    <string name="txt_one_day">One Day</string>
    <string name="txt_two_day">Two Day</string>
    <string name="txt_three_day">Three Day</string>
    <string name="txt_four_day">Four Day</string>
    <string name="txt_five_day">Five Day</string>
    <string name="txt_one_person">One Person</string>
    <string name="txt_two_person">Two Persons</string>
    <string name="txt_three_person">Three Persons</string>
    <string name="txt_four_person">Four Persons</string>
    <string name="txt_five_person">Five Persons</string>
    <string name="txt_session">%s / Session</string>
    <string name="txt_time">Time :</string>
    <string name="txt_gallery">Gallery :</string>
    <string name="txt_order_value">Order : %s</string>
    <string name="txt_date_value">Date : %s</string>
    <string name="txt_times"><b>Monday to Friday:</b> 8 a.m. – 10 p.m.\n<b>Saturday:</b> 8:30 a.m. – 6 p.m.\n<b>Sunday:</b>9 a.m. – 1 p.m.</string>
    <string name="txt_just_now">Just now</string>
    <string name="txt_minute_ago">A minute ago</string>
    <string name="txt_minutes_ago">%s minutes ago</string>
    <string name="txt_an_hour_ago">An hour ago</string>
    <string name="txt_hours_ago">%s hours ago</string>
    <string name="txt_yesterday">Yesterday</string>
    <string name="txt_days_ago">%s days ago</string>
    <string name="txt_every_friday">Every friday</string>
    <string name="txt_you">You</string>
    <string name="txt_hotel">Hotel</string>
    <string name="txt_chat_writing">Chat writing ......</string>

    <!-- *********** Menu *********** -->
    <string name="txt_home">Home</string>
    <string name="txt_category">Category</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_favorite">Favorite</string>

    <!-- *********** Title *********** -->
    <string name="txt_title_service">Services</string>
    <string name="txt_title_cart">Cart</string>
    <string name="txt_title_favorite">Favorite</string>
    <string name="txt_title_chat">Chat</string>
    <string name="txt_title_settings">Settings</string>
    <string name="txt_title_profile">Profile</string>
    <string name="txt_title_edit_profile">Edit Profile</string>
    <string name="txt_title_language">Language</string>
    <string name="txt_title_description">Description</string>
    <string name="txt_title_price">Price</string>
    <string name="txt_title_historic">Historic</string>
    <string name="txt_restaurant">Restaurant</string>
    <string name="txt_gym">Gym</string>
    <string name="txt_swimming_pool">Swimming pool</string>
    <string name="txt_event">Event</string>

    <!-- *********** Button *********** -->
    <string name="txt_btn_skip">Skip</string>
    <string name="txt_btn_next">Next</string>
    <string name="txt_btn_go">Go</string>
    <string name="txt_btn_back">Back</string>
    <string name="txt_btn_ok">OK</string>
    <string name="txt_btn_yes">Yes</string>
    <string name="txt_btn_no">No</string>
    <string name="txt_btn_arabic">Arabic</string>
    <string name="txt_btn_english">English</string>
    <string name="txt_btn_login">Login</string>
    <string name="txt_btn_sing_up">Sing Up</string>
    <string name="txt_btn_registration">Create your account</string>
    <string name="txt_btn_scan">Scan</string>
    <string name="txt_btn_save">Save</string>
    <string name="txt_btn_logout">Logout</string>
    <string name="txt_btn_less">-</string>
    <string name="txt_btn_more">+</string>
    <string name="txt_btn_add_to_cart">Add to cart</string>
    <string name="txt_btn_confirm">Confirm</string>
    <string name="txt_btn_booking">Booking</string>

    <!-- *********** Message *********** -->
    <string name="txt_error_email">Invalid email address</string>
    <string name="txt_error_password">Invalid password</string>
    <string name="txt_error_confirm_password">Invalid confirm password</string>
    <string name="txt_error_last_name">Invalid lastName</string>
    <string name="txt_error_first_name">Invalid firstName</string>
    <string name="txt_msg_title_logout">Logout</string>
    <string name="txt_msg_logout">Are you sure you want to disconnect?</string>
</resources>