<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:title="Home"
        android:icon="@drawable/ic_home" />

    <item
        android:id="@+id/serviceFragment"
        android:title="@string/txt_title_service"
        android:icon="@drawable/ic_category" />

    <item android:id="@+id/placeholder"
        android:title="" />

    <item
        android:id="@+id/favoriteFragment"
        android:title="@string/txt_favorite"
        android:icon="@drawable/img_favorite" />

    <item
        android:id="@+id/settingFragment"
        android:title="@string/txt_settings"
        android:icon="@drawable/ic_settings"/>

</menu>