<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCerulean"
    tools:context=".presentation.welcome.WelcomeFragment">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:src="@drawable/img_logo_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_hello"
        style="@style/TextViewStyle.Bold.64"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/txt_hello"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLogo" />

    <TextView
        android:id="@+id/txt_eat_and_meet"
        style="@style/TextViewStyle.32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/txt_hotel_wallet"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_hello" />

    <TextView
        android:id="@+id/txt_select_your_languages"
        style="@style/TextViewStyle.18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/txt_select_your_languages"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/btn_english"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_eat_and_meet"
        app:layout_constraintVertical_bias="0.75" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_english"
        style="@style/HotelWalletButtonMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/txt_btn_english"
        android:textColor="@color/colorCerulean"
        app:backgroundTint="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/btn_arabic" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_arabic"
        style="@style/HotelWalletButtonMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/txt_btn_arabic"
        android:textColor="@color/colorWhite"
        app:backgroundTint="@color/colorDoveGray"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>