<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.sign.LoginFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorCerulean"
                android:paddingVertical="24dp"
                android:src="@drawable/img_logo"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/txt_login"
                style="@style/TextViewStyle.Bold.32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/txt_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_logo" />

            <TextView
                android:id="@+id/txt_eat_and_meet"
                style="@style/TextViewStyle.24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/txt_hotel_wallet"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_login" />

            <EditText
                android:id="@+id/edit_email"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="18dp"
                android:drawableStart="@drawable/img_user"
                android:drawablePadding="16dp"
                android:hint="@string/txt_enter_your_email_or_mobile"
                app:layout_constraintTop_toBottomOf="@+id/txt_eat_and_meet" />

            <EditText
                android:id="@+id/edit_password"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:drawableStart="@drawable/img_lock"
                android:drawablePadding="16dp"
                android:hint="@string/txt_password"
                android:inputType="textPassword"
                android:paddingEnd="32dp"
                app:layout_constraintTop_toBottomOf="@+id/edit_email" />

            <ImageView
                android:id="@+id/img_show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:clickable="true"
                android:focusable="true"
                android:padding="4dp"
                android:src="@drawable/img_show_password"
                app:layout_constraintBottom_toBottomOf="@+id/edit_password"
                app:layout_constraintEnd_toEndOf="@+id/edit_password"
                app:layout_constraintTop_toTopOf="@+id/edit_password" />

            <TextView
                android:id="@+id/txt_forget_password"
                style="@style/TextViewStyle.16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/txt_forget_password"
                android:textColor="@color/text_selector_min_shaft"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/HotelWalletButtonMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/txt_btn_login"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                app:backgroundTint="@color/colorCerulean"
                app:layout_constraintTop_toBottomOf="@+id/txt_forget_password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_signUp"
                style="@style/HotelWalletButtonSecond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/txt_btn_sing_up"
                android:textAllCaps="false"
                android:textColor="@color/colorCerulean"
                app:layout_constraintTop_toBottomOf="@+id/btn_login"
                app:strokeColor="@color/colorConcrete" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>