<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.menu.MenuListFragment">

    <include
        android:id="@+id/toolBar"
        layout="@layout/main_toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar"
        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/row_item_cart" />

    <LinearLayout
        android:id="@+id/linearBottom"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_margin="12dp"
        android:background="@drawable/rectangle_blue_radius15"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            style="@style/TextViewStyle.Medium.16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_total"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/txtTotal"
            style="@style/TextViewStyle.Bold.20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            tools:text="24.00 DT" />

        <Button
            android:id="@+id/btnConfirm"
            style="@style/HotelWalletButtonSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:text="@string/txt_btn_confirm"
            android:textColor="@color/colorWhite"
            app:iconTint="@color/colorWhite"
            app:icon="@drawable/img_check"
            app:iconGravity="end"
            app:strokeColor="@color/colorWhite" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtNoItems"
        style="@style/TextViewStyle.Medium.16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txt_no_items"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>